name:                google-html5-slide
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Hideyuki Tanaka
maintainer:          tanaka.hideyuki@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable google-html5-slide
  main-is:             main.hs
  other-modules:       HTML5Slide
  build-depends:       base       ==4.5.*
                     , syb        ==0.3.*
                     , time       >=1.4
                     , blaze-html >=0.5
                     , pandoc     >=1.9
                     , hamlet     >=1.0
