name:                google-html5-slide
version:             0.1.0.0
synopsis:            Google HTML5 Slide generator
description:         
  Google HTML5 Slide <https://code.google.com/p/html5slides/> generator
  for Pandoc documents
license:             BSD3
license-file:        LICENSE
author:              Hideyuki Tanaka
maintainer:          Hideyuki Tanaka <tanaka.hideyuki@gmail.com>
copyright:           (c) 2012, Hideyuki Tanaka
category:            Web
build-type:          Simple
cabal-version:       >=1.8

source-repository head
  type:                git
  location:            https://github.com/tanakh/pandoc-html5slide.git

executable google-html5-slide
  main-is:             main.hs
  other-modules:       HTML5Slide
  build-depends:       base       ==4.5.*
                     , syb        ==0.3.*
                     , time       >=1.4

                     , blaze-html >=0.5
                     , pandoc     >=1.9
                     , hamlet     >=1.0
